--- a/css/basic.css
+++ b/css/basic.css
@@ -23,10 +23,10 @@ a {color:inherit}
 header {
     position:fixed; top:0; left:0; z-index:100;
     width:100%; height:80px;
-    border-bottom:1.5px solid #111 ;
     background:rgba(250, 250, 250,0.2);
     backdrop-filter: blur(10px);
     transition:.5s;
+    border-bottom:1.5px solid #111;
 }
 #header_inner {
     max-width:1224px; height:100%; margin:0 auto;
@@ -51,6 +51,8 @@ header {
 .log_inner li a {line-height:80px; font-size:17px;}
 
 .nav_tri {display:none;}
+
+.nav_aside {display:none;}
 
 .visualSwiper {
     position:relative; 
