--- a/css/media.css
+++ b/css/media.css
@@ -16,14 +16,20 @@
 }
 
 
-@media (max-width:1023px){
+@media (max-width:1024px){
     .v_txtWrap h2 {font-size:38px;}
-
+    header {
+        z-index:102;
+    }
     .logo {margin-left:20px;}
     .nav_gnb{display:none;}
     .nav_log {display:none;}
 
-    .nav_tri {display: block; padding-top:20px;margin-right:20px;}
+    .nav_tri {
+        display:block;
+        padding-top:20px;
+        margin-right:20px;
+    }
     .nav_tri a {
         display: block;
         width: 32px;
@@ -40,13 +46,98 @@
     }
     .nav_tri span:before, .nav_tri span:after {
         position: absolute;
-        display:block; content:''; background:#111;
-        width:100%; height:2px; 
+        display:block; 
+        content:''; 
+        background:#111;
+        width:100%; 
+        height:2px; 
     }
     .nav_tri span:before {top:-9px;}
     .nav_tri span:after {top:9px;}
 
-    
+    .nav_aside {
+        position:fixed;
+        top:0;
+        left:0;
+        width:100%;
+        height:0;
+        display: block;
+        background: #fff;
+        z-index:101;
+        overflow: hidden;
+        transition:.5s;
+    }
+    .nav_aside.active {height:100%;}
+
+    .nav_aside_wrap {
+        position:absolute;
+        top:120px;
+        left:0;
+        width:100%;
+        font-family:'Poppins',sans-serif;
+    }
+    .nav_aside_log {
+        max-width:1024px;
+        height:auto;
+        margin:0 20px;
+        display:flex;
+        justify-content:space-between;
+    }
+    .aside_log_search {
+        font-size:24px;
+    }
+    .aside_log_inner {
+        line-height:24px;
+        font-size: 17px;
+        transition:.3s;
+    }
+    .aside_log_inner li {
+        display: inline-block;
+        margin-left:20px;
+        transition:.3s;
+    }
+
+    .nav_aside_gnb {
+        position:absolute;
+        top:210px;
+        left:0;
+        width:100%;
+    }
+    .aside_gnb_inner {
+        max-width:1024px;
+        margin:0 20px;
+    }
+    .aside_gnb_inner li {
+        padding:15px 0;
+        border-bottom:1.5px solid #111;
+        position:relative;
+    }
+    .aside_gnb_inner li a {
+        font-size:24px;
+        transition:.3s;
+    }
+    .aside_gnb_inner li .icon {
+        position: absolute;
+        top:50%;
+        right:0;
+        width:22px;
+        height:22px;
+    }
+    .aside_gnb_inner li .icon::before, .aside_gnb_inner li .icon::after {
+        display: block;
+        content:'';
+        background:#111;
+        width:22px;
+        height:2px;
+    }
+    .aside_gnb_inner li .icon::before {
+        
+    }
+    .aside_gnb_inner li .icon::after {
+        transform:rotate(90deg);
+        margin-top:-1.5px;
+    }
+
 .topTitle {
     margin-top:90px;
     margin-bottom:80px;
@@ -66,6 +157,10 @@
 header {height:60px;}    
 .logo {margin-top:10px; width:150px;}
 .nav_tri {padding-top:10px;}
+
+.nav_aside_wrap {
+    top:100px;
+}
 
 .topTitle {
     margin-top:65px;
@@ -147,6 +242,32 @@ header {height:60px;}
 
 
 @media (max-width: 468px){
+
+    .aside_log_search {
+        font-size:17px;
+    }
+    .aside_log_inner {
+        line-height:17px;
+        font-size: 14px;
+    }
+    .aside_log_inner li {
+        display:block;
+        margin-bottom:10px;
+    }
+
+    .aside_gnb_inner li {
+        padding:10px 0;
+    }
+    .aside_gnb_inner li a {
+        font-size:17px;
+    }
+    .aside_gnb_inner li .icon {
+        width:16px;
+        height:16px;
+    }
+    .aside_gnb_inner li .icon::before, .aside_gnb_inner li .icon::after {
+        width:16px;
+    }
 
 .visualSwiper .swiper-pagination-fraction {
     font-size:calc(15px + 0.6vw);
