--- a/css/basic.css
+++ b/css/basic.css
@@ -31,6 +31,7 @@ header {
 #header_inner {
     max-width:1224px; height:100%; margin:0 auto;
     display: flex; justify-content:space-between;
+    align-items: center;
     font-family:'Poppins',sans-serif;
 }
 .nav_gnb {display:block;}
@@ -39,7 +40,7 @@ header {
     line-height:80px; font-size:17px;
 }
 
-.logo {width:185px; height:37px; margin-top:20px;}
+.logo {width:185px; height:37px;}
 .logo a {
     display:block; width:100%; height:100%;
     background:url(../img/logo.svg) no-repeat center center/contain;
@@ -187,7 +188,7 @@ header {
         overflow: hidden;
     font-size:15px;
     color:#111;
-    font-weight:500;
+    font-weight:600;
 }
 .txtBox .title h4 {
     text-overflow:ellipsis;
@@ -195,17 +196,24 @@ header {
 		-webkit-line-clamp:1;
         -webkit-box-orient:vertical;
         overflow:hidden;
-    margin-top:5px;
-    font-size:17px; font-weight:400; color:#111;}
+    margin-top:6px;
+    font-size:17px; 
+    font-weight:400; 
+    color:#333;}
+
 .txtBox .pri {
     display: inline-block;
-    margin-top:10px;
-    font-size:20px; font-weight:700; color:#111;}
+    margin-top:8px;
+    font-size:20px; 
+    font-weight:700; 
+    color:#111;
+}
+
 .txtBox .del_pri {
     display: inline-block;
     font-size:16px;
-    padding-right:8px;
-    color:#19c430;
+    padding-right:5px;
+    color:#bebebe;
 }
 
 .more_btn {
@@ -252,15 +260,17 @@ header {
 }
 .b_title h3 {
     font-size:2rem;
-    margin-top:10px;
+    margin-top:6px;
     font-weight:600; 
     line-height:1.4;
     letter-spacing:-1px;
     transition:.3s;
 }
 
-.tab_listWrap {}
-.tab_listWrap .tab {}
+.tab_listWrap {
+    height:26%;
+}
+
 .tab_listWrap .tab_list {
     width:392px;
     margin-bottom:10px;
@@ -286,7 +296,7 @@ header {
 }
 .tab_listWrap .tab_list:after {
     display:block; content:'';
-    margin-top:5px;
+    margin-top:12px;
     width:100%; height:2px; background: #111;
 }
 
@@ -331,14 +341,19 @@ header {
     width:100%; height: 1px;
 }  
 .goodsSwiper .swiper-scrollbar-drag{
-    height: 3px;
+    height:3px;
     border-radius: 0; 
     background: #111; margin: -1px;}
 
-.goodsSwiper .c_title {margin-top:12px; color:#707070;} 
+.goodsSwiper .c_title {
+    font-size:0.875rem;
+    margin-top:12px; 
+    color:#707070;
+} 
+
 .goodsSwiper .c_name {
     display:inline-block;
-    margin-top:5px;
+    margin-top:6px;
     font-size:20px; font-weight:500;
 }
 
@@ -347,14 +362,17 @@ header {
     top:0;
     left:0;
     padding:20px 14px;
-    background:#c44f19;
+    background:#60aa27;
     font-size:17px;
     color:#fff;
 }
+
 .new_badge {
     display:inline-block;
-    color:#19c430;
-    padding-left:5px;
+    font-weight:500;
+    font-family:'Poppins';
+    color:#bd1414;
+    padding-left:4px;
     font-size:calc(12px + 0.2vw);
 }
 
@@ -363,18 +381,22 @@ header {
 .container4 {
     background:#eee; padding:1px 0 140px 0;
 }
+
+.sns_title {
+    margin-bottom:0;
+}
+
 .sns_subTitle {
-    position:relative;
-    top:calc(-45px + -1.5vh);
-    width:100%;
     text-align:center;
-    font-size:calc(13px + 0.5vw);
     margin-top:10px;
-    font-family: 'Poppins',sans-serif;
+    padding-bottom: 60px;
+    font-size:calc(13px + 0.5vw);
     font-weight:300;
+    font-family: 'Poppins',sans-serif;
     color: #707070;
     transition:.3s;
 }
+
 .sns_wrap {
     max-width:1224px;
     margin:0 auto;
