--- a/css/basic.css
+++ b/css/basic.css
@@ -20,6 +20,10 @@ body {
 }
 a {color:inherit}
 
+.wrapper {
+    min-width:1224px;
+}
+
 header {
     position:fixed; top:0; left:0; z-index:100;
     width:100%; height:80px;
@@ -34,22 +38,31 @@ header {
     align-items: center;
     font-family:'Poppins',sans-serif;
 }
+
 .nav_gnb {display:block;}
-.gnb_inner > li {display:inline-block; margin-right:3vw;}
-.gnb_inner > li a {
-    line-height:80px; font-size:17px;
+.log_inner, .gnb_inner {display:flex;}
+.log_inner > li a, .gnb_inner > li a {
+    display:flex; line-height:80px; font-size:17px; color:#fff; padding:0 25px;
 }
 
 .logo {width:185px; height:37px;}
 .logo a {
-    display:block; width:100%; height:100%;
+    display:block; width:100%; min-width:150px; height:100%; 
     background:url(../img/logo.svg) no-repeat center center/contain;
-    text-indent:-9999px;}
+    text-indent:-9999px; filter: invert(100%); transition:all 0.3s;}
+
+#header_inner.on .log_inner > li a, 
+#header_inner.on .gnb_inner > li a {
+    color:#000;
+}
+
+#header_inner.on .logo a {
+    filter: invert(0%);
+}
+
 .trig_logo {display:none;}
 
 .nav_log {display:block;}
-.log_inner li {display:inline-block; margin-left:3vw;}
-.log_inner li a {line-height:80px; font-size:17px;}
 
 .nav_tri {display:none;}
 
@@ -61,11 +74,9 @@ header {
     height:98vh;
     overflow: hidden;
 }
-.visualSwiper swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.visualSwiper .swiper-slide img {
+    width:100%;
+    height:100%;
 }
 .visualSwiper .swiper-slide-active img {
     animation:visual 3s forwards ease-in-out;
@@ -203,7 +214,7 @@ header {
 
 .txtBox .pri {
     display: inline-block;
-    margin-top:8px;
+    margin-top:10px;
     font-size:20px; 
     font-weight:700; 
     color:#111;
