--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 @media (max-width:1200px){
+    .wrapper {min-width:auto;}
     .v_txtWrap p {font-size:18px;}
     .visualSwiper .swiper-pagination-fraction {
         top:calc(55% - 1vh);
@@ -39,7 +40,7 @@
         position: absolute;
         width: 100%;
         height: 2px;
-        background:#111;
+        background:#fff;
         transition:.3s;
     }
     .nav_tri span:nth-child(1) {top:5px;}
@@ -48,6 +49,10 @@
         transform: translateY(-50%);
     }
     .nav_tri span:nth-child(3) {bottom:5px;}
+
+    .nav_tri.open span {
+        background:#000;
+    }
 
     .nav_tri.open span:nth-child(1) {
         transform: rotate(45deg);
